@@ -15,3 +15,6 @@
 .ma_accounts_label { font-weight: bold; padding: 5px; font-size: 15px; }
 .ma_accounts_notification { padding: 8px; }
 .ma_accounts_sortable_placeholder { width: 100px; height: 16px; }
+
+.ma_accounts_help_table { border: 1px solid #000; }
+.ma_accounts_help_table td { border: 1px solid #000; padding: 0 20px 0 5px; }
